# starting-ragchatbot-codebase

./: .pre-commit-config.yaml  CLAUDE.md  dev.sh  frontend-changes.md  pyproject.toml  run.sh
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_rag_integration.py  test_real_integration.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
